<resources>
    <string name="app_name">Assasement1Raka</string>
    <string name="parkirText">Sistem Pembayaran Parkir</string>
    <string name="noKendaraanInput">No Kendaraan</string>
    <string name="namaKendaraanInput">Nama Kendaraan</string>
    <string name="dataKendaraanText">Data Kendaraan</string>
    <string name="namaPemilikInput">Nama Pemilik</string>
    <string name="tambahBtn">Tambah Kendaraan</string>
    <string name="tambahKendaraanText">Tambah Kendaraan</string>

    <string-array name="Jenis">
        <item>Motor</item>
        <item>Mobil</item>
        <item>Truk</item>

    </string-array>

    <string name="dialogMessage">Data Kendaraan </string>
    <string name="keluarText">Keluar Parkir</string>
    <string name="pemasukanText">Tarif Parkir</string>
    <string name="dataParkirText">Data Parkir</string>
    <string name="perbaikanText">Mohon maaf, fitur sedang dalam perbaikan</string>
    <string name="tentang_aplikasi">Tentang Aplikasi</string>
    <string name="about">Aplikasi ini merupakan sebuah aplikasi Android untuk
mencatat kendaraan yang parkir sehingga memudahkan untuk proses pembayaran ataupun mengetahui
berapa kendaraan yang parkir.\n\nAplikasi ini dibuat untuk memenuhi tugas Assasement 2.\n\nCopyright © 2023 Raka Ryaudi Nalda.\nAll rights reserved.</string>
    <string name="bagikan">Bagikan</string>
    <string name="bagikan_template">--DATA KENDARAAN PARKIR--\n\n
        No Kendaraan: %1$s\n
        Nama Kendaraan: %2$s\n
        Nama Pemilik: %3$s\n
        Jenis Kendaraan: %4$s
    </string>
    <string name="belum_ada_data">Belum ada data</string>
    <string name="histori">Histori</string>
    <string name="list">
        No Kendaraan: %1$s\n
        Nama Kendaraan: %2$s\n
        Nama Pemilik: %3$s\n
        Jenis Kendaraan: %4$s
    </string>
    <string name="hapus_histori">Hapus Histori</string>
    <string name="konfirmasi_hapus">Hapus semua histori?</string>
    <string name="hapus">Hapus</string>
    <string name="batal">Batal</string>
    <string name="koneksi_error">Koneksi error</string>
    <string name="channel_name">Updater</string>
    <string name="channel_desc">Update data kendaraan otomatis</string>
    <string name="notif_title">Anda belum update data parkir nih:(</string>
    <string name="notif_text">Cek sekarang!</string>
</resources>