<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/dataKendaraan"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.TambahFragment">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="675dp"
            android:fontFamily="@font/abhaya_libre_extrabold"
            android:text="@string/dataKendaraanText"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/noKendaraan_hint"
            android:layout_width="362dp"
            android:layout_height="58dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.489"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintVertical_bias="0.127">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inpNoKendaraan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/noKendaraanInput"
                android:textColorHint="#616161" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/jenisKendaraan_hint"
            android:layout_width="362dp"
            android:layout_height="58dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/noKendaraan_hint"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/noKendaraan_hint"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.334">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inpNamaKendaraan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/namaKendaraanInput"
                android:textColorHint="#616161" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/namaPemilik_hint"
            android:layout_width="362dp"
            android:layout_height="58dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/jenisKendaraan_hint"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/jenisKendaraan_hint"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.483">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inpNamaPemilik"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/namaPemilikInput"
                android:textColorHint="#616161" />
        </com.google.android.material.textfield.TextInputLayout>

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="362dp"
            android:layout_height="58dp"
            android:entries="@array/Jenis"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/namaPemilik_hint"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/namaPemilik_hint"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.633" />

        <Button
            android:id="@+id/tbhKendaraanBtn"
            android:layout_width="225dp"
            android:layout_height="48dp"
            android:text="@string/tambahBtn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/spinner"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="@+id/spinner"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.762" />

        <Button
            android:id="@+id/shareButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bagikan"
            tools:visibility="visible"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tbhKendaraanBtn"
            app:layout_constraintVertical_bias="0.339" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>